# SystemIndicator

./: CMakeLists.txt  README.md
include/: SystemIndicator.h
sources/: Helper.h  SystemIndicator.cpp
sources/Linux/: LinuxSystemIndicator.cpp  SystemIndicator.cpp
sources/MacOS/: MacOSSystemIndicator.mm  SystemIndicator.mm
sources/Win32/: ProcessorInfo.cpp  ProcessorInfo.h  SystemIndicator.cpp  Win32SystemIndicator.cpp
test/: Test.cpp
